# qdtools_for_windows

./: .gitignore  CMakeLists.txt  UsefulVariables.cmake
modules/gitflow/: .gitrepo  LICENSE  README.md  dev_1_merge_dev_to_master.sh  dev_2_push_master.sh  pull_dev.sh  pull_master.sh  task_1_starting_task.sh  task_2_merge_task_to_dev.sh  task_3_delete_task.sh  (+1 more)
modules/imagine/: .gitignore  .gitrepo  CMakeLists.txt  Makefile  imagine.dox  make.cmd  smartmet-library-imagine.spec
modules/imagine/examples/: Makefile  MetArrow.cpp  NFmiFaceExample.cpp  NFmiImageExample.cpp  PgmToPng.cpp  PngToPgm.cpp  PngToPnm.cpp  PnmToPng.cpp
modules/imagine/imagine/: ImagineXr.cpp  ImagineXr.h  NFmiAffine.cpp  NFmiAffine.h  NFmiAlignment.cpp  NFmiAlignment.h  NFmiApproximateBezierFit.cpp  NFmiApproximateBezierFit.h  NFmiBezierTools.cpp  NFmiBezierTools.h  NFmiCardinalBezierFit.cpp  NFmiCardinalBezierFit.h  NFmiColorBlend.h  NFmiColorReduce.cpp  NFmiColorReduce.h  NFmiColorTools.cpp  NFmiColorTools.h  NFmiContourTree.cpp  NFmiContourTree.h  NFmiCounter.h  NFmiDataHints.cpp  NFmiDataHints.h  NFmiDrawable.cpp  NFmiDrawable.h  NFmiEdge.h  NFmiEdgeTree.cpp  NFmiEdgeTree.h  NFmiEsriAttribute.h  NFmiEsriAttributeName.h  NFmiEsriBox.cpp  NFmiEsriBox.h  NFmiEsriBuffer.cpp  NFmiEsriBuffer.h  NFmiEsriElement.cpp  NFmiEsriElement.h  NFmiEsriMultiPatch.cpp  NFmiEsriMultiPatch.h  NFmiEsriMultiPoint.cpp  NFmiEsriMultiPoint.h  NFmiEsriMultiPointM.cpp  (+56 more)
modules/macgyver/: .gitignore  .gitrepo  CMakeLists.txt  Makefile  smartmet-library-macgyver.spec
modules/macgyver/examples/: .cvsignore  Makefile  monitor.cpp  trigger.cpp
modules/macgyver/macgyver/: Astronomy.h  AstronomyHelperFunctions.h  AstronomyJulianTime.cpp  AstronomyJulianTime.h  AstronomyLunarPhase.cpp  AstronomyLunarTime.cpp  AstronomySolarPosition.cpp  AstronomySolarTime.cpp  Base64.cpp  Base64.h  Cache.cpp  Cache.h  Cast.cpp  Cast.h  CharsetTools.cpp  CharsetTools.h  CsvReader.cpp  CsvReader.h  DebugTools.cpp  DebugTools.h  DirectoryMonitor.cpp  DirectoryMonitor.h  Geometry.cpp  Geometry.h  HelmertTransformation.cpp  HelmertTransformation.h  LatLonTree.h  Matrix.h  NearTree.h  NearTreeLatLon.h  ObjectPool.h  Pretty.h  ReferenceEllipsoid.cpp  ReferenceEllipsoid.h  Stat.cpp  Stat.h  StringConversion.cpp  StringConversion.h  TemplateDirectory.cpp  TemplateDirectory.h  (+20 more)
modules/smarttools/: .gitrepo  CMakeLists.txt  Makefile  smartmet-library-smarttools.spec
modules/smarttools/smarttools/: NFmiAreaMaskInfo.cpp  NFmiAreaMaskInfo.h  NFmiAreaMaskSectionInfo.h  NFmiAviationStationInfoSystem.cpp  NFmiAviationStationInfoSystem.h  NFmiCalculationConstantValue.cpp  NFmiCalculationConstantValue.h  NFmiColor.h  NFmiColorSpaces.cpp  NFmiColorSpaces.h  NFmiDataStoringHelpers.cpp  NFmiDataStoringHelpers.h  NFmiDrawParam.cpp  NFmiDrawParam.h  NFmiDrawParamFactory.cpp  NFmiDrawParamFactory.h  NFmiDrawParamList.cpp  NFmiDrawParamList.h  NFmiExtraMacroParamData.cpp  NFmiExtraMacroParamData.h  NFmiGridPointCache.h  NFmiGriddingHelperInterface.h  NFmiGriddingProperties.cpp  NFmiGriddingProperties.h  NFmiHelpDataInfo.cpp  NFmiHelpDataInfo.h  NFmiIgnoreStationsData.cpp  NFmiIgnoreStationsData.h  NFmiInfoAreaMaskOccurrance.cpp  NFmiInfoAreaMaskOccurrance.h  NFmiInfoAreaMaskSoundingIndex.cpp  NFmiInfoAreaMaskSoundingIndex.h  NFmiInfoOrganizer.cpp  NFmiInfoOrganizer.h  NFmiLocalAreaMinMaxMask.cpp  NFmiLocalAreaMinMaxMask.h  NFmiMetEditorTypes.h  NFmiModifiableQDatasBookKeeping.cpp  NFmiModifiableQDatasBookKeeping.h  NFmiMultiLevelMask.cpp  (+46 more)
qdtools/: .gitrepo  CMakeLists.txt
qdtools/main/: grd2qd.cpp  qdcrop.cpp  qdinterpolatetime.cpp  qdstat.cpp  qdversionchange.cpp
qdtools/main-cmake-lists/flash2qd/: CMakeLists.txt
qdtools/main-cmake-lists/grd2qd/: CMakeLists.txt
qdtools/main-cmake-lists/gribtoqd/: CMakeLists.txt
qdtools/main-cmake-lists/qdclimatologydatasmoother/: CMakeLists.txt
qdtools/main-cmake-lists/qdcrop/: CMakeLists.txt
qdtools/main-cmake-lists/qddiff/: CMakeLists.txt
qdtools/main-cmake-lists/qddifference/: CMakeLists.txt
qdtools/main-cmake-lists/qdinterpolatetime/: CMakeLists.txt
qdtools/main-cmake-lists/qdscript/: CMakeLists.txt
qdtools/main-cmake-lists/qdsignificantlevelfilter/: CMakeLists.txt
qdtools/main-cmake-lists/qdsoundingindex/: CMakeLists.txt
qdtools/main-cmake-lists/qdstat/: CMakeLists.txt
qdtools/main-cmake-lists/qdversionchange/: CMakeLists.txt
qdtools/test/data/: 3h.h5  PAHM44_MWCR_261000.bufr  PAHM44_SOCA_271827.bufr  PAHM44_SYCJ_260630.bufr  PAHM44_TBPB_260500.bufr  amdar.bufr  buoy.bufr  cappi.h5  comp.h5  daily.h5  dbz.h5  etop.h5  hiladata.sqd  hshear.h5  land.bufr  lmr.h5  ltb.h5  max.h5  nullsynop.csv  pac.h5  pal_xh.sqd  pistedata.fqd  ppi.h5  pvol.h5  reversesynop.csv  road1h.csv  shear.h5  shear2.h5  smv.h5  sounding.bufr  soundings_idleveltime.csv  soundings_idtimelevel.csv  soundings_levelidtime.csv  soundings_leveltimeid.csv  soundings_timeidlevel.csv  soundings_timelevelid.csv  sri.h5  srv.h5  synop.csv  synop.sqd  (+5 more)
qdtools/test/results/: bufrtoqd_amdar.sqd  bufrtoqd_buoy.sqd  bufrtoqd_land.sqd  bufrtoqd_ship.sqd  bufrtoqd_sounding.sqd  csv2qd_road1h_plain  csv2qd_sounding_timelevelid  csv2qd_synop_reverse  csv2qd_synop_timezone  h5toqd_3h.sqd  h5toqd_cappi.sqd  h5toqd_comp.sqd  h5toqd_daily.sqd  h5toqd_dbz.sqd  h5toqd_etop.sqd  h5toqd_max.sqd  h5toqd_pac.sqd  h5toqd_ppi.sqd  h5toqd_vil.sqd  qdarea_06_12_mean_t2m_Helsinki  qdarea_06_18_mean_t2m_Helsinki  qdarea_all_mean_t2m_25_60  qdarea_epoch_mean_t2m_Helsinki  qdarea_mean_t2m_25_60  qdarea_mean_t2m_Helsinki  qdarea_mean_t2m_Helsinki_50  qdarea_mean_t2m_Helsinki_Turku_Imatra  qdarea_min_max_t2m_Helsinki  qdarea_percentage_rain  qdarea_php_mean_min_max_t2m_Helsinki  qdarea_php_mean_t2m_Helsinki_Turku_Imatra  qdarea_php_tmean_tmin_tmax_Helsinki  qdarea_stockholm_mean_t2m_Helsinki  qdarea_utc_mean_t2m_Helsinki  qdcrop_argument_W_discard_ranges_succeeds  qdcrop_argument_a_succeeds  qdcrop_argument_g_1_2_succeeds  qdcrop_argument_g_2_1_succeeds  qdcrop_argument_g_2_2_succeeds  qdcrop_argument_g_minus_succeeds  (+101 more)
scripts/: move_gitflow_contents_here.sh
(+343 files in other folders)
